data/derived/sp14/progs/unify/prog1994.ml.out
Characters 83-98:
  | Sine e1 -> sin(pi *. exprToString e1)
                         ^^^^^^^^^^^^^^^
Error: This expression has type string but an expression was expected of type
         float
